--- a/app/views/designers/_form.html.erb
+++ b/app/views/designers/_form.html.erb
@@ -177,5 +177,5 @@
 
 
 <% content_for :recaptcha_script do %>
-  <script src="https://www.google.com/recaptcha/api.js?render=<%= Rails.application.credentials.dig(:recaptcha, :site_key) %>"></script>
+  <script src="https://www.google.com/recaptcha/api.js?render=<%= ENV["RECAPTCHA_SITE_KEY"] %>"></script>
 <% end %>
