--- a/app/views/designers/_designer.html.erb
+++ b/app/views/designers/_designer.html.erb
@@ -686,6 +686,7 @@
     const openPopupButton = document.getElementById("openPopupSave");
     const closePopupButton = document.getElementById("closePopupSave");
     const popup = document.getElementById("popup");
+     if (!openPopupButton || !closePopupButton || !popup) return;
 
     openPopupButton.addEventListener("click", function() {
       popup.style.display = "flex";
