--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -90,7 +90,7 @@
   <%end%>
   <p class="subtitle-top">Votre contribution</p>
   <h1 class="title-add-elements">Exprimer votre avis</h1>
-  <p class="subtitle">En pleine phase bêta, vos retours sont essentiels pour nous ! Partagez vos impressions, suggestions et commentaires pour nous aider à améliorer Omniscient Design. Votre avis est précieux et nous guide dans l'optimisation de notre plateforme. Merci de faire partie de cette aventure !</p>
+  <p class="subtitle">Vos retours sont essentiels pour nous ! Partagez vos impressions, suggestions et commentaires pour nous aider à améliorer Omniscient Design. Votre avis est précieux et nous guide dans l'optimisation de notre plateforme. Merci de faire partie de cette aventure !</p>
 </section>
 
 <section class="grid-1" style="background-color:#202020; color:#FFF; min-height:100vh;">
