--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -92,11 +92,12 @@
   letter-spacing: -1%;
   font-weight: 500;
 }
-
+.card .subtitle-card {
+  margin-top: 32px;
+}
 .subtitle-card {
   text-transform: uppercase;
   font-size: 20px;
-  margin-top: 32px;
   display: flex;
 }
 
